--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <div class="logo"><img src="logo.png" alt="logo"></div>
                     <div class="navigation">
                         <nav>
-                            <a href="#" target="blank">Home</a>
-                            <a href="#" target="blank">Tracks</a>
-                            <a href="#" target="blank">Library</a>
-                            <a href="#" target="blank">Community</a>
+                            <a href="#" target="_blank">Home</a>
+                            <a href="#" target="_blank">Tracks</a>
+                            <a href="#" target="_blank">Library</a>
+                            <a href="#" target="_blank">Community</a>
                             <a class="button" href="#" target="_blank">SIGN IN</a>
                         </nav>
                     </div>
